Fix double border on group-list-small

--- a/src/sentry/static/sentry/less/stream.less
+++ b/src/sentry/static/sentry/less/stream.less
@@ -309,7 +309,7 @@
   }
 
   &.group-list-small {
-    margin: 0;
+    margin: -1px;
 
     .row {
       padding: 0 10px;
